--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,7 +16,7 @@ nav
     display: grid
     grid-template: "brand menu" / 1fr auto
 
-    @media(max-width: 480px)
+    @media(max-width: 768px)
         display: block
         opacity: 1
         top: 60px
@@ -28,14 +28,14 @@ nav
         margin-left: 25px
         font-size: 1.5em
         color: #777
-        @media(max-width: 480px)
+        @media(max-width: 768px)
             display: none
 
     .menu
         grid-area: menu
         list-style: none
         display: flex
-        @media(max-width: 480px)
+        @media(max-width: 768px)
             display: block
             height: 0
             overflow: hidden
@@ -45,7 +45,7 @@ nav
         padding: 1em
         &:hover
             background: rgba(0,0,0,.75)
-        @media(max-width: 480px)
+        @media(max-width: 768px)
             width: 100%
             text-align: center
             border-bottom: 1px solid lighten($dark, 10)
@@ -57,7 +57,7 @@ nav
         color: #fff
 
 .burger-container
-    @media(max-width: 480px)
+    @media(max-width: 768px)
         color: $light
         background: $dark
         opacity: .8
@@ -65,7 +65,9 @@ nav
         display: block
         position: fixed
         top: 0
-        width: 94%
+        width: 96%
+        @media(max-width: 575px)
+            width: 94%
         
         .burger
             cursor: pointer
@@ -77,7 +79,7 @@ nav
         text-decoration: underline
 
 .open
-    height: 203px !important
+    height: 254px !important
 
 .container    
     width: 60vw
@@ -93,10 +95,9 @@ nav
     display: flex
     justify-content: center
     align-items: center
-    @media(max-width: 480px)
+    @media(max-width: 768px)
         z-index: -1
         margin-top: -60px
-    @media(max-width: 360px)
         height: 50vh
 
 .hero-content
@@ -162,7 +163,6 @@ nav
         +header
     min-height: 250px
     background: $light
-    padding-bottom: 10em
 
 .gallery-container
     display: grid
@@ -195,3 +195,38 @@ footer
     .fa
         font-size: 1.2em
         color: yellow
+
+.testimonials
+    h1
+        +header
+        
+    padding-bottom: 10em
+
+    .testimonial-container 
+        min-height: 200px
+        display: grid
+        grid-template: "user" "content" / 1fr
+        text-align: justify
+        padding: 1em
+        .test-user
+            grid-area: user
+            min-width: 200px
+            text-align: center
+            @media(min-width: 768px)
+                margin-top: -20px
+        .test-content
+            grid-area: content
+        .fa
+            font-size: 4em
+        img
+            width: 75px
+            border-radius: 50%
+        @media(min-width: 768px)
+            grid-template: "user content" / 1fr auto
+        @media(min-width: 1400px)
+            grid-template: "user" "content" / 1fr
+    .testimonial-items
+        @media(min-width: 1400px)
+            display: grid
+            grid-template-columns: repeat(3, 1fr)
+            grid-gap: 2em
