fixed contact form

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -236,7 +236,9 @@ footer
 
     form
         width: 100%
+
     .form-group
+        width: 100%
         margin-bottom: 1rem
     label
         display: inline-block
@@ -258,7 +260,6 @@ footer
         background: transparent
         text-transform: uppercase
         cursor: pointer
-        float: right
         &:hover
             background: #92bed7
             color: #fff
@@ -274,3 +275,6 @@ footer
         justify-content: center
         .contact-container
             width: 80%
+    @media(min-width: 1028px)
+        .container
+            width: 30vw
